<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.techbeloved.b_tic_tac_toe.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <Button
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:id="@+id/xPlayerBtn"
            android:drawableStart="@drawable/ic_clear"
            android:text="@string/score_placeholder"
            android:textSize="@dimen/text_small"
            android:textAlignment="viewEnd"/>

        <!--Space is for separation of the two buttons-->
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:id="@+id/oPlayerBtn"
            android:drawableStart="@drawable/ic_circle"
            android:text="@string/score_placeholder"
            android:textSize="@dimen/text_small"
            android:textAlignment="viewEnd"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/game_status_textview"
        android:textAlignment="center"
        android:padding="4dp"
        android:layout_gravity="center"
        tools:text="Select player or start game"/>

    <!--ViewFlipper holds the two layouts - threeSquare and fiveSquare layouts.-->
    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_flipper"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right">

        <include layout="@layout/three_square_layout" />

        <include layout="@layout/five_square_layout" />

        <include layout="@layout/result_layout" />

    </ViewFlipper>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/game_mode_radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/single_player_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:layout_marginEnd="16dp"
                android:drawableEnd="@drawable/ic_person_black_24dp"
                android:checked="true" />

            <RadioButton
                android:id="@+id/play_friend_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:drawableEnd="@drawable/ic_people_black_24dp" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/grid_choice_radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_weight="1"
            android:gravity="end">

            <RadioButton
                android:id="@+id/three_square_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="8dp"
                android:text="@string/three_square"
                android:checked="true" />

            <RadioButton
                android:id="@+id/five_square_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="8dp"
                android:text="@string/five_square" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <Button
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:id="@+id/restartBtn"
            android:text="@string/restart_game"/>

        <!--Space is for separation of the two buttons-->
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:id="@+id/resetBtn"
            android:text="@string/reset_game"/>
    </LinearLayout>

</LinearLayout>
